draft of completed translation

--- a/public/chn/ch_index.html
+++ b/public/chn/ch_index.html
@@ -96,10 +96,10 @@
                                 <li><a href="http://wordpress.com/echeckid" target="_blank">博客 </a></li>
                                 <li><a href="contact">联络我们</a></li>
 
-                                <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
+                                <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
 
-                                    <ul style="width:120px; overflow: hidden; !important">
-                                        <li style="width: 25px !important"><a href="#">Chinese</a></li>
+                                    <ul style="width:115px; overflow: hidden; !important">
+                                        <li style="width: 25px !important"><a href="../index.html">English</a></li>
                                     </ul>
                                 </li>
 
@@ -159,7 +159,7 @@
                          data-endspeed="300"
                          data-endeasing="Power1.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 6; font-size: 40px !important;">Address Concern For
+                         style="z-index: 6; font-size: 40px !important; font-family: NotoSansTraditional !important;">解答
                     </div>
 
                     <div class="tp-caption large_bold_white customin ltl"
@@ -171,7 +171,7 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14"><strong> &nbsp;&nbsp;Product</strong>
+                         style="z-index: 14;  font-family: NotoSansTraditional !important;"><strong> &nbsp;&nbsp;产品安全</strong>
                     </div>
 
                     <div class="tp-caption large_bold_white skewfromrightshort customout"
@@ -184,7 +184,7 @@
                          data-endspeed="500"
                          data-endeasing="Power4.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 2"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Safety</strong>
+                         style="z-index: 2;  font-family: NotoSansTraditional !important;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> 忧虑</strong>
                     </div>
 
 
@@ -230,7 +230,7 @@
                          data-endspeed="300"
                          data-endeasing="Power1.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 6; font-size: 50px !important;">Deliver
+                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">提供
                     </div>
 
                     <div class="tp-caption large_bold_white customin ltl"
@@ -242,7 +242,7 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 38px !important;"><strong>Product Information & <br/> Promotion </strong>
+                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;"><strong>产品和促销信息</strong>
                     </div>
                 </li>
 
@@ -262,7 +262,7 @@
                          data-easing="Power4.easeOut"
                          data-endspeed="500"
                          data-endeasing="Power4.easeIn"
-                         style="z-index: 6; font-size: 30px !important;">Establish Direct
+                         style="z-index: 6; font-size: 40px !important; font-family: NotoSansTraditional !important;">建立直接
                     </div>
 
 
@@ -276,10 +276,10 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 50px !important;"><strong> &nbsp;&nbsp;Brand-Consumer </strong>
+                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;"><strong> &nbsp;&nbsp;品牌与消费者互动 </strong>
                     </div>
 
-                    <div class="tp-caption large_bold_white skewfromrightshort customout"
+                   <!-- <div class="tp-caption large_bold_white skewfromrightshort customout"
                          data-x="right"
                          data-y="230"
                          data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
@@ -289,8 +289,8 @@
                          data-endspeed="500"
                          data-endeasing="Power4.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 2; font-size: 50px !important;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Interactions</strong>
-                    </div>
+                         style="z-index: 2; font-size: 50px !important; font-family: NotoSansTraditional !important;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Interactions</strong>
+                    </div>    -->
 
                 </li>
 
@@ -308,7 +308,7 @@
 <div class="joosa punch_text01">
     <div class="container">
 
-        <a href="#" class="pur_link"><i class="fa fa-location-arrow"></i>&nbsp; See Demo</a>
+        <a href="http://v.youku.com/v_show/id_XNzczNDc0ODUy.html" class="pur_link" target="_blank"><i class="fa fa-location-arrow"></i>&nbsp; See Demo</a>
 
     </div>
 </div><!-- end punch text section -->
@@ -318,7 +318,7 @@
 <div class="clearfix mar_top3"></div>
 
 <div class="joosa bottom_section">
-    <div class="container">
+    <div class="container" style="font-family: NotoSansTraditional; !important">
 
         <div class="one_half">
 
@@ -326,7 +326,7 @@
 
                 <!-- section 1 -->
 
-                <span class="acc-trigger" title="click header to collapse; image to expand"><a href="#"><h2>for <strong>Consumers</strong></h2></a></span>
+                <span class="acc-trigger" title="click header to collapse; image to expand"><a href="#" class="t"><h2><strong>消费者</strong></h2></a></span>
                 <div class="acc-container">
                     <div class="content"></div>
                     <span class="acc-trigger" style="width: 100%"></span>
@@ -336,23 +336,20 @@
                 <div class="acc-container">
                     <div class="content">
                         <p>
-                            eCheckID mobile product information platform enables consumers to consume with confidence by providing real-time information on authenticity, expiry, allergens,
-                            and/or recall status of health sensitive or other consumer packaged products.  A simple scan of the eCheckID 2D barcode on the product packaging using the eCheckID
-                            app offers consumers immediate access to authenticity and safety information of each unit of product they purchase or consume.  Consumers do not have to enter a
-                            complex string of alphanumerical characters onto the brands’ web site to determine authenticity, or try to check the holographic sticker or the printing on the packaging
-                            to guess the authenticity of a particular unit.
+                            随着伪造产品在全球的盛行及消费者对食品安全的关注，消费者需要一个实时系统来确定真伪，产品来源，有效期，过敏原或召回状态等信息。全息贴纸 (holographic sticker)
+                            等过时的产品认证方法并不可靠且易被伪造。并且固定的产品包装印刷并不能实时提供产品的状态，详情或当前展开的促销活动。
+                            例如食物及保健品的实时召回信息对於消费者来说是非常重要的。
                         </p><br/>
 
                         <p>
-                            Unlike regular UPC or other marketing oriented 2D bar code, the eCheckID code contains encrypted, hard to counterfeit product identification information
-                            that identifies each specific unit of the product.  Once scanned, critical up to date information―like safety recall―specific to the unit of product in the consumer’s
-                            possession is delivered instantaneously to the consumer’s mobile device.  Consumer with certain allergic condition can be warned of the presence of allergens in the product
-                            like lactose, tree nuts, glutens, shell fish, etc.
+                            易知网实时系统能提供一体化产品信息应用。该应用包含真伪认证，促销信息，召回状态，社交网络互动等，并能与品牌厂商直接连通。
+                            消费者只需要使用手机或平板电脑等移动设备扫描每个产品的易知网个别识别二维碼便能获得当前产品信息, 实现一键跟踪或注册产品。
+                            同时产品的召回，促销，或营销信息将被实时推送到消费者的移动设备。
                         </p><br/>
 
                         <p>
-                            Additional written product information, video or sound recording of usage ideas like recipe, usage direction, or comments from other customers or experts
-                            can be delivered directly to the consumer's smart phone or tablet to enhance consumer's appreciation of the product's benefits.
+                            消费者能因此享用各种促销活动包括忠实计划，回扣，产品折扣或抽奖等。并且消费者能够在社交网络上分享与点赞产品，提升产品的声誉。
+                            易知网所有的营销服务都能实时更新且无缝集成。消费者可在移动平台上与品牌互动，无需填写在线或纸质表格。
                         </p><br/>
 
 
@@ -372,7 +369,7 @@
 
                 <!-- section 1 -->
 
-                <span class="acc-trigger1" title="click header to collapse; image to expand"><a href="#"><h2>for <strong>Brands</strong></h2></a></span>
+                <span class="acc-trigger1" title="click header to collapse; image to expand"><a href="#" class="t"><h2><strong>品牌厂商</strong></h2></a></span>
                 <div class="acc-container1">
                     <div class="content"></div>
                     <span class="acc-trigger1" style="width: 100%"></span>
@@ -382,49 +379,21 @@
                 <div class="acc-container1">
                     <div class="content">
                         <p>
-                            eCheckID provides an easy-to-deploy service for brands to improve their brand equity
+                            易知网为品牌厂商提供易于部署的移动平台服务，通过防伪措施和提供与消费者直接互动的渠道来提升品牌价值。
+                            重要的产品信息，交叉销售，追加销售或促销信息可直接推送给目标消费者的手机或平板电脑等移动设备上。
+                            忠诚和回扣计划也能通过易知网的移动应用來实现。
+                            品牌厂商能够得到与消费者有关的重要使用和注册信息，分析促销计划的成效，确定冒牌产品的地理位置及数量密度，或從授权销售渠道非法转移的产品数量及分布。
+                            <br/><br/>
 
-                            by making their products harder to counterfeit and giving them a conduit for real-time
 
-                            consumer interaction. Critical product safety information, cross-sell, up-sell or discount
+                            这些服务是通过易知网云端服务和不可伪造的加密产品识别及跟踪技术来实现的。
+                            消费者以易知网移动应用扫描易知网二维码后，二维码包含的数据会被自动输送到易知网的云端服务器進行解密及分析。
+                            同时，产品的真伪认证和其他信息会被发送至消费者的移动设备。
+                            如果消费者注册了他们的产品，关键注册及使用信息将被储存在易知网的云端数据庫中。易知网也會分析所收集的数据，并以此提供关于消费模式和地点的信息，假冒产品的位置和数量，和從授权销售渠道非法转移的产品分布。
+                            <br/><br/>
 
-                            offers can be sent directly to targeted consumers. Loyalty and rebate programs can also
 
-                            be implemented using the eCheckID app. Brand owners can obtain critical usage and
-
-                            registration information about the consumers, as well as analytics about the efficacy
-
-                            of promotional offers, location and density of counterfeit products, or the diversion of
-
-                            products from authorized channel of distribution. <br/><br/>
-
-                            These services are enabled through eCheckID’s cloud service and individualized product
-
-                            tracking using a unique label created from an encrypted digital signature that cannot be
-
-                            duplicated by counterfeiters. Once scanned by the eCheckID app on the consumers’ mobile
-
-                            device, the barcode is translated and decrypted by the eCheckID cloud service. In response,
-
-                            product authenticity and other information related to the unit of product are sent to the
-
-                            consumers’ mobile device. If the consumer chooses to register their ownership of the
-
-                            product, key registration information will be recorded in eCheckid’s central cloud service.
-
-                            eCheckID also analyzes data collected to deliver actionable information about the pattern
-
-                            and location of consumption, location and density of counterfeit products, and diversion of
-
-                            products from legitimate channels. <br/><br/>
-
-                            The eCheckID solution is delivered as a cloud-service so it is very easy to deploy. In
-
-                            addition, the eCheckID barcode that uniquely identifies each unit of product can be
-
-                            designed with embedded logo and color scheme that enhances the brand identity of the
-
-                            product.
+                            易知网解决方案通过云端传送，所以极易部署。而且，识别每个产品单元的易知网二維码能够嵌入商标和色彩，从而提升产品的品牌特性。
                             <br/>
 
 
