--- a/public/chn/wedo.html
+++ b/public/chn/wedo.html
@@ -131,23 +131,21 @@
 <!-- Contant
 ======================================= -->
 
-<div class="container">
+<div class="container" style="font-family: NotoSansTraditional; !important">
 
 <div class="content_left">
 
     <div class="accrodation">
 
-        <h2>What we do</strong></h2>
+        <h2><strong>我们的业务 </strong></h2>
 
         <!-- section 1 -->
-        <span class="acc-trigger active"><a href="#">General Overview</a></span>
+        <span class="acc-trigger active"><a href="#">概览</a></span>
         <div class="acc-container">
             <div class="content">
-                eCheckID provides an easy to use platform for brands to deliver crucial product information in real time and interact directly
-                with consumers using ubiquitous mobile devices that consumers carry at all times.  The eCheckID solution incorporates a free app for
-                consumer mobile phones and tablets; cloud-based computers for data processing and analysis; software to define and create secured product identifiers;
-                and a web interface for brand managers to directly interact with consumers.  Brand owners can deploy the eCheckID solution without having to install or maintain software.
-                Likewise, consumers can enjoy the assurance of product safety or special promotions using the free eCheckID app on their mobile device without giving up their privacy.
+                易知网为品牌厂商提供一个便捷的平台去及时传递重要的产品信息， 并且通过无所不在的移动设备直接与消费者互动。
+                易知网的解决方案包含一个免费下载的手机和平板电脑移动应用、建立在云端的数据处理和分析系统、创建加密的产品识别码的软件和可让品牌厂商管理者直接与消费者互动的网络界面。
+                易知网的云端服务能让品牌厂商部署易知网解决方案而无需安装或维护软件及服务器。同样消费者能通过易知网的免费移动应用获取准确的产品安全和促销信息，而不用透露他们的隐私。
 
                 <br/><br/>
                 <div class="center">
@@ -157,63 +155,51 @@
         </div>
 
         <!-- section 3 -->
-        <span class="acc-trigger"><a href="#">Product Information & Authentication</a></span>
+        <span class="acc-trigger"><a href="#">产品信息和认证真伪</a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
-                    eCheckID mobile product information platform enables consumers to consume with confidence by providing real-time information on authenticity, expiry, allergens,
-                    and/or recall status of health sensitive or other consumer packaged products.  A simple scan of the eCheckID 2D barcode on the product packaging using the eCheckID
-                    app offers consumers immediate access to authenticity and safety information of each unit of product they purchase or consume.  Consumers do not have to enter a
-                    complex string of alphanumerical characters onto the brands’ web site to determine authenticity, or try to check the holographic sticker or the printing on the packaging
-                    to guess the authenticity of a particular unit.
+                    易知网移动产品信息平台通过提供实时的认证，有效期、过敏和召回状态信息，能让消费者放心的享用食物与健康相关的的消费品。
+                    消费者只需要对产品包装上的易知网二维码进行简易的扫描，便能立刻得到她们购买的产品的真伪和安全信息。
+                    消费者不必在品牌官网上输入复杂的验证码去确定真伪，也不用通过检查全息防伪标示或防伪图案去推测产品的真伪。
                 </p><br/>
 
                 <p>
-                    Unlike regular UPC or other marketing oriented 2D bar code, the eCheckID code contains encrypted, hard to counterfeit product identification information
-                    that identifies each specific unit of the product.  Once scanned, critical up to date information―like safety recall―specific to the unit of product in the consumer’s
-                    possession is delivered instantaneously to the consumer’s mobile device.  Consumer with certain allergic condition can be warned of the presence of allergens in the product
-                    like lactose, tree nuts, glutens, shell fish, etc.
+                    不同于普通通用产品代码或其他市场导向的二维码，经过加密的易知网产品个别识别码使产品的识别信息极难被伪造。一旦扫描，如产品召回等重要实时信息，将立刻被推送到消费者的移动终端。
+                    若食品中含有诸如乳糖、坚果、麸质和贝类等过敏原的话，对這些过敏症原有不良反应的消费者便能得到实时警示。
                 </p><br/>
 
                 <p>
-                    Additional written product information, video or sound recording of usage ideas like recipe, usage direction, or comments from other customers or experts
-                    can be delivered directly to the consumer's smart phone or tablet to enhance consumer's appreciation of the product's benefits.
+                    额外的产品文字、视频或语音信息，譬如食谱、使用指南或来自其他消费者或专家的评论都能被直接推送到消费者的移动终端上。这也增强了消费者对产品功效的满意度。
                 </p><br/>
 
             </div>
         </div>
 
         <!-- section 5 -->
-        <span class="acc-trigger"><a href="#">Brand-Consumer Interaction</a></span>
+        <span class="acc-trigger"><a href="#">品牌厂家与消费者互动 </a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
-                With complex, multi-tier export-import, wholesale, brick and mortar retail and e-commerBrace sales channels, it is difficult, if not impossible, for the brand owner
-                to interact directly with each individual consumer.    For consumer products, just knowing who and where the consumers are by itself is an impossible task.   In case
-                of high-volume consumer packaged goods like cosmetics or nutritional products, the limited point-of-sale scan data is useless in establishing connection between the brand owner
-                and consumers, and it is certainly not practical to ask consumers to fill out registration post card or a registration form.  With the eCheckID app, consumers can easily register
-                their use or ownership of the product.   There is no need for consumers to do any more than simply scan the eCheckID code and click the registration button.
+                    由于复杂及多层次的进出口、批发、零售和电子商务环节，品牌厂商难以直接和每个消费者直接一对一沟通。以消费品而言，品牌厂商現在是无法辨别消费者的身份和消费地点的。
+                    假如是大流量的包装消费品如化妆品或保健品等，销售点条形码的扫描数据是极之局限而无法帮助品牌厂商与消费者建立联系的。
+                    通过使用易知网移动应用，消费者能够便捷的注册他们的产品使用和所有权。消费者要做的仅仅是扫描易知网二维码和按下注册按钮。
             </p><br/>
 
                 <p>
-                    By registering through the eCheckID app, consumers can automatically register what stock keeping unit (SKU) of the product and specific unit of product they are using
-                    and the place and time they purchase or consume the product.  The brand owner can tailor their communication with consumers by suggesting complementary products, offering
-                    useful product information, and most importantly, timely alerting consumers to critical safety information that affects the specific unit of product in their possession.
-                    For products with known consumption duration, brand owners can even to send a unit to a particular consumer before the product ran out.
+                    通过易知网移动应用进行注册，消费者能够自动登记他们购买的个别产品的单元， 和他们购买或使用這产品单元的时间及地点。
+                    品牌厂商能调整他们传递给消费者的信息、推荐互补产品及提供使用信息，最重要的是能够实时发送与消费者和产品相关的重要安全信息，提升消费者对品牌的信赖。
+                    对于如奶粉之类的周期性消费品，品牌厂商能在消费者用完手上存貨之前补充同一产品， 以便消费者继续消费。
+                    消费者能直接通过移动应用将对产品的反馈直接发送给品牌厂商，且不用查阅产品包装上的产品编号和拨打服务电话。
+
                 </p><br/>
 
-                <p>
-                    For consumers, feedback about the product can be sent to the brand owner from their mobile device without having to look up the SKU from the product packaging and call the
-                    customer support line.
-                </p><br/>
 
                 <p>
-                    Social networking plays a significant role in how consumers perceive and value the functionality and quality of a product.  The eCheckID app is
-                    integrated with popular social networking sites, such as Facebook and Twitter.  Consumers can interact with their friends as well as the brand using
-                    these popular social networking sites.  If they have a positive experience with a product, they can easily send a Tweet about their experience, or post a "like"
-                    on the brand's Facebook page.   They could also share new usage ideas with friends or among their peers, and drives up awareness and demand for the product.
-                    The eCheckID app makes it very easy for consumers to help generate buzz around a product or a brand.  In response, the brand can encourage positive social networking activities,
-                    including “liking” a product on Facebook by consumer, through incentives that can be delivered via the eCheckID app.
+                    社交网络在消费者对产品功效和质量的评价有着重要的作用。易知网移动应用整合了国内外主要的博客和社交网络，例如微博，人人，脸谱和Twitter等。
+                    消费者能够通过这些主要社交网络和他们的朋友以及品牌厂家联络。如果他们对产品有好的体验，他们能够容易地发布相关的微博或在社交网络上点赞及分享。
+                    消费者也能与朋友分享他们对产品的意見，这同时也能提升产品的知名度和需求。易知网应用能使消费者帮助一个产品或品牌成为关注的话题。
+                    作为回应，品牌厂商可以通过易知网应用奖励消费者来鼓励积极的社交网络活动，例如消费者在社交网络上对产品点赞等。
                 </p><br/>
 
 
@@ -221,30 +207,25 @@
         </div>
 
         <!-- section 6 -->
-        <span class="acc-trigger"><a href="#">Mobile Marketing Communication</a></span>
+        <span class="acc-trigger"><a href="#">移动营销通信 </a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
-                    Besides sending product safety information directly to consumers based on the specific unit of product they purchased, a brand owner can send marketing or
-                    promotional messages directly to targeted consumers’ mobile devices.  Certainly, there are many ways a brand can communicate with consumers ranging from traditional
-                    off-line approaches like print advertising and direct mail, to online techniques like banner ads on popular web sites or search-engine marketing.  Unfortunately, most
-                    of these approaches simply splatter marketing messages across a wide audience, and cannot be targeted at specific users of the brand's products with certain demographics
-                    or characteristics.  Furthermore, the marketing messages are delivered through media or personal computers that, unlike the consumers' mobile device, are not with or accessible
-                    by the consumers at all times.  No wonder that so very few of these messages hit the mark.
+                    除了能基于消费者购买的产品单元而直接推送产品安全信息以外，品牌厂商也能够向目标消费者的移动终端推送营销或促销信息。
+                    虽然一个品牌有很多途径与消费者沟通，从传统的离线方式如平面广告和投递邮件，到在线的方式如网页横幅或搜索引擎广告。
+                    然而这些途径大多数仅仅是广泛的传播营销信息给某一群体，而不能根据市場资料或消费特点向真正会使用该品牌产品的目标消费者投放。
+                    此外，不同于移动终端，通过传统媒体和互联网传递的营销的信息不能随时推送到消费者手里。因此这些营销信息很少能达到其理想的目标。
                 </p><br/>
 
                 <p>
-                    Marketing messages delivered through eCheckID goes directly to mobile devices that consumers carry at all times.  The messages can also be accurately targeted to
-                    actual consumers of a product, or consumers of complementary products.  In order words, eCheckID is the marketer's dream―allowing messages to be targeted at the audience
-                    ho cares, in the right place, at the right time.
+                    通过易知网传递的信息会直接送达消费者随身携带的移动终端中。营销信息能够准确的传递给使用某产品或互补产品的真实消费者。
+                    易知网能够在合适的地点，合适的时间，给目标消费者传递信息, 使营销人员梦想成真。
                 </p><br/>
 
                 <p>
-                    Consumers are not just interested in learning more about the product they consume, they are also interested in programs that help reduce the price of the
-                    products they are interested in, and build affinity with the brands they care about.  The eCheckID platform also supports brand loyalty program for consumers to
-                    earn points and win prizes, rebates or product discount based on their purchases.   To earn points, instead of requiring consumers to mail the receipt and part of the
-                    packaging to a service agent, or register and enter a string of alphanumeric characters on a web site, a simple scan of the eCheckID code using the eCheckID app will automatically
-                    credit them with the correct number of points.  Similarly, the brand owner can run a lottery program where consumers enter the lottery by scanning a concealed eCheckID code.
+                    消费者不仅乐于获知更多他们使用的产品的信息，他们也对能降低他们关注的产品的价格之促销活动特感兴趣，这些活动也能帮助他们建立与品牌的亲密度。
+                    品牌厂商也可以使用易知网平台來提供品牌忠诚积分活动，让消费者赢取基于购买产品数量的奖励、回扣或折扣。消费者可使用易知网移动应用简单地扫描易知网二维码来自动获得积分。
+                    她们再不需要使用繁锁的邮寄或在网站上注册等方式來赢取积分。品牌厂商也能够通过消费者扫描易知网二维码刮出的密码来进行抽奖活动。
                 </p><br/>
             </div>
         </div>
