--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,7 @@
 <div class="joosa punch_text01">
 	<div class="container">
         
-        <a href="#" class="pur_link"><i class="fa fa-location-arrow"></i>&nbsp; See Demo</a>
+        <a href="http://youtu.be/NNg-VaTywbU" class="pur_link" target="_blank"><i class="fa fa-location-arrow"></i>&nbsp; See Demo</a>
            
     </div>
 </div><!-- end punch text section -->
@@ -324,7 +324,7 @@
 
                 <!-- section 1 -->
 
-                <span class="acc-trigger" title="click header to collapse; image to expand"><a href="#"><h2>for <strong>Consumers</strong></h2></a></span>
+                <span class="acc-trigger" title="click header to collapse; image to expand"><a href="#" class="t"><h2>for <strong>Consumers</strong></h2></a></span>
                 <div class="acc-container">
                     <div class="content"></div>
                     <span class="acc-trigger" style="width: 100%"></span>
@@ -370,7 +370,7 @@
 
                 <!-- section 1 -->
 
-                <span class="acc-trigger1" title="click header to collapse; image to expand"><a href="#"><h2>for <strong>Brands</strong></h2></a></span>
+                <span class="acc-trigger1" title="click header to collapse; image to expand"><a href="#" class="t"><h2>for <strong>Brands</strong></h2></a></span>
                 <div class="acc-container1">
                     <div class="content"></div>
                     <span class="acc-trigger1" style="width: 100%"></span>
