finished touches on chinese translation

--- a/public/chn/about.html
+++ b/public/chn/about.html
@@ -89,7 +89,7 @@
 
                                 </li>
 
-                                <li><a href="http://wordpress.com/echeckid" target="_blank">博客 </a></li>
+                                <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
                                 <li><a href="contact">联络我们</a></li>
 
                                 <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
