--- a/public/chn/contact.html
+++ b/public/chn/contact.html
@@ -89,7 +89,7 @@
 
                                         </li>
 
-                                        <li><a href="http://wordpress.com/echeckid" target="_blank">博客</a></li>
+                                        <li><a href="http://echeckid.wordpress.com/" target="_blank">博客</a></li>
                                         <li><a href="contact.html" class="active">联络我们</a></li>
 
                                         <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
@@ -132,11 +132,11 @@
 
         <div class="clearfix mar_top3"></div>
 
-        <div class="joosa bottom_section">
+        <div class="joosa bottom_section" style="font-family: NotoSansTraditional; !important">
             <div class="container">
 
                 <div class="one_full" style="font-family: NotoSansTraditional; !important">
-                    <h2>Contact us</h2>
+                    <h2>联络我们</h2>
                     <br/><br/>
 
                         <ul class="address-info">
