--- a/public/chn/wedo.html
+++ b/public/chn/wedo.html
@@ -89,7 +89,7 @@
 
                                 </li>
 
-                                <li><a href="http://wordpress.com/echeckid" target="_blank">博客 </a></li>
+                                <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
                                 <li><a href="contact">联络我们</a></li>
 
                                 <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
@@ -140,7 +140,7 @@
         <h2><strong>我们的业务 </strong></h2>
 
         <!-- section 1 -->
-        <span class="acc-trigger active"><a href="#">概览</a></span>
+        <span class="acc-trigger active"><a href="#" style="font-size: 20px">概览</a></span>
         <div class="acc-container">
             <div class="content">
                 易知网为品牌厂商提供一个便捷的平台去及时传递重要的产品信息， 并且通过无所不在的移动设备直接与消费者互动。
@@ -155,7 +155,7 @@
         </div>
 
         <!-- section 3 -->
-        <span class="acc-trigger"><a href="#">产品信息和认证真伪</a></span>
+        <span class="acc-trigger"><a href="#" style="font-size: 20px">产品信息和认证真伪</a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
@@ -177,7 +177,7 @@
         </div>
 
         <!-- section 5 -->
-        <span class="acc-trigger"><a href="#">品牌厂家与消费者互动 </a></span>
+        <span class="acc-trigger"><a href="#" style="font-size: 20px">品牌厂家与消费者互动 </a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
@@ -207,7 +207,7 @@
         </div>
 
         <!-- section 6 -->
-        <span class="acc-trigger"><a href="#">移动营销通信 </a></span>
+        <span class="acc-trigger"><a href="#" style="font-size: 20px">移动营销通信 </a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
