--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
 
                     </li>
 
-                    <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
+                    <li><a href="http://echeckid.wordpress.com/" target="_blank">Blog </a></li>
                     <li><a href="contact">Contact</a></li>
 
                     <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
