--- a/public/wedo.html
+++ b/public/wedo.html
@@ -89,7 +89,7 @@
 
                                 </li>
 
-                                <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
+                                <li><a href="http://echeckid.wordpress.com/" target="_blank">Blog </a></li>
                                 <li><a href="contact">Contact</a></li>
 
                                 <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
@@ -140,7 +140,7 @@
         <h2>What we do</strong></h2>
 
         <!-- section 1 -->
-        <span class="acc-trigger active"><a href="#">General Overview</a></span>
+        <span class="acc-trigger active"><a href="#" style="font-size: 20px">General Overview</a></span>
         <div class="acc-container">
             <div class="content">
                 eCheckID provides an easy to use platform for brands to deliver crucial product information in real time and interact directly
@@ -157,7 +157,7 @@
         </div>
 
         <!-- section 3 -->
-        <span class="acc-trigger"><a href="#">Product Information & Authentication</a></span>
+        <span class="acc-trigger"><a href="#" style="font-size: 20px">Product Information & Authentication</a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
@@ -184,7 +184,7 @@
         </div>
 
         <!-- section 5 -->
-        <span class="acc-trigger"><a href="#">Brand-Consumer Interaction</a></span>
+        <span class="acc-trigger"><a href="#" style="font-size: 20px">Brand-Consumer Interaction</a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
@@ -221,7 +221,7 @@
         </div>
 
         <!-- section 6 -->
-        <span class="acc-trigger"><a href="#">Mobile Marketing Communication</a></span>
+        <span class="acc-trigger"><a href="#" style="font-size: 20px">Mobile Marketing Communication</a></span>
         <div class="acc-container">
             <div class="content">
                 <p>
