--- a/public/chn/ch_index.html
+++ b/public/chn/ch_index.html
@@ -93,7 +93,7 @@
 
                                 </li>
 
-                                <li><a href="http://wordpress.com/echeckid" target="_blank">博客 </a></li>
+                                <li><a href="http://echeckid.wordpress.com/" target="_blank">博客 </a></li>
                                 <li><a href="contact">联络我们</a></li>
 
                                 <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
@@ -159,7 +159,7 @@
                          data-endspeed="300"
                          data-endeasing="Power1.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 6; font-size: 40px !important; font-family: NotoSansTraditional !important;">解答
+                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">解答
                     </div>
 
                     <div class="tp-caption large_bold_white customin ltl"
@@ -171,10 +171,10 @@
                          data-easing="Back.easeInOut"
                          data-endspeed="400"
                          data-endeasing="Back.easeIn"
-                         style="z-index: 14;  font-family: NotoSansTraditional !important;"><strong> &nbsp;&nbsp;产品安全</strong>
+                         style="z-index: 14; font-size: 68px !important; font-family: NotoSansTraditional !important;"><strong>产品安全 忧虑</strong>
                     </div>
 
-                    <div class="tp-caption large_bold_white skewfromrightshort customout"
+                   <!-- <div class="tp-caption large_bold_white skewfromrightshort customout"
                          data-x="0"
                          data-y="280"
                          data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
@@ -184,8 +184,8 @@
                          data-endspeed="500"
                          data-endeasing="Power4.easeIn"
                          data-captionhidden="on"
-                         style="z-index: 2;  font-family: NotoSansTraditional !important;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> 忧虑</strong>
-                    </div>
+                         style="z-index: 2; font-size: 50px !important; font-family: NotoSansTraditional !important;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> 忧虑</strong>
+                    </div>     -->
 
 
                     <div class="tp-caption lightgrey_divider skewfromrightshort customout"
@@ -262,7 +262,7 @@
                          data-easing="Power4.easeOut"
                          data-endspeed="500"
                          data-endeasing="Power4.easeIn"
-                         style="z-index: 6; font-size: 40px !important; font-family: NotoSansTraditional !important;">建立直接
+                         style="z-index: 6; font-size: 50px !important; font-family: NotoSansTraditional !important;">建立直接
                     </div>
 
 
@@ -332,7 +332,7 @@
                     <span class="acc-trigger" style="width: 100%"></span>
                 </div>
 
-                <span class="acc-trigger active"><a href="#"><img src="../images/for_con.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
+                <span class="acc-trigger active"><a href="#"><img src="../images/for_con_ch.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
                 <div class="acc-container">
                     <div class="content">
                         <p>
@@ -375,7 +375,7 @@
                     <span class="acc-trigger1" style="width: 100%"></span>
                 </div>
 
-                <span class="acc-trigger1 active"><a href="#"><img src="../images/for_bra.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
+                <span class="acc-trigger1 active"><a href="#"><img src="../images/for_bra_ch.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
                 <div class="acc-container1">
                     <div class="content">
                         <p>
