clarified local fonts

--- a/public/index_old.html
+++ b/public/index_old.html
@@ -440,7 +440,7 @@
 
 <!-- ######### JS FILES ######### -->
 
-<!-- get jQuery from the google apis -->
+<!-- get jQuery -->
 <script type="text/javascript" src="js/universal/jquery.js"></script>
 
 <!-- style switcher -->
