--- a/public/chn/contact.html
+++ b/public/chn/contact.html
@@ -226,7 +226,7 @@
 
 
 <!-- ######### JS FILES ######### -->
-<!-- get jQuery from the google apis -->
+<!-- get jQuery -->
 <script type="text/javascript" src="../js/universal/jquery.js"></script>
 
 <!-- style switcher -->
