--- a/public/contact.html
+++ b/public/contact.html
@@ -23,8 +23,10 @@
 
 <link rel="stylesheet" href="css/reset.css" type="text/css" />
 <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/notosans.css" type="text/css"/>
 
-<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
 <!-- responsive devices styles -->
 <link rel="stylesheet" media="screen" href="css/responsive-leyouts.css" type="text/css" />
