--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 	
     <link rel="stylesheet" href="css/reset.css" type="text/css" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/notosans.css" type="text/css"/>
     
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     
