--- a/public/wedo.html
+++ b/public/wedo.html
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" href="css/reset.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/notosans.css" type="text/css"/>
+
 
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 
